2016-05-03  Charlie Zender  <zender@uci.edu>

	* Add stubs to check CF "coordinates" attribute to infer grid

2016-05-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.0-beta05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.0-beta05 final changes';git push
	git tag -a 4.6.0-beta05 -m 'Version 4.6.0-beta05 new features: ncclimo/ncremap rgr, netCDF4 grids, upk MOD13, SLURM_NODELIST';git push --tags

	* ncpdq: initialize REDEFINED_RECORD_DIMENSION=False only once, before variable loop (bug caught by Pedro)

	* ncpdq: change "break;" to "continue;" (bug caught by Pedro)

	* Fix non-interactive batch mode on SLURM to expand SLURM_NODELIST and store as file like PBS and Cobalt

2016-05-01  Charlie Zender  <zender@uci.edu>

	* Change --upk switch. Was flag and synonym for -U, --unpack (ncpdq only)
	Now --upk arg where arg=[0,1,2]=[netCDF=MOD04,MOD10,MOD13] unpacking algorithm

	* Expand HDF4 hdf_upk logic to nco_upk_HDF_MOD10, nco_upk_HDF_MOD13 for MODIS MOD10CM and MOD13C2 datasets

	* Correct order of shuffle,deflate in nco_var_def_deflate()

	* Respect fl_fm_out and dfl_lvl in nco_grd_mk(), nco_grd_nfr(), nco_rgr_map()

2016-04-29  Charlie Zender  <zender@uci.edu>

	* Add ncremap and ncclimo regression tests when $USER=zender

2016-04-29  Henry Butowsky  <henryb@hush.com>

	* Add has_miss() to the _miss() familty in utl_cls()

2016-04-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.0-beta04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.0-beta04 final changes';git push
	git tag -a 4.6.0-beta04 -m 'Version 4.6.0-beta04 new features: TMPDIR, var=var.double(), c2b, grid_mapping';git push --tags

	* Finish first pass at documenting ncclimo

2016-04-28  Henry Butowsky  <henryb@hush.com>

	* IMPORTANT: revert mods in 4.5.4. Once again variables in input can be redefined in output without a cast:
	  time=time.int() is once again exactly equivalent to time[$time]=time.int()
