@@ -1,5 +1,7 @@
 2016-05-03  Charlie Zender  <zender@uci.edu>
 
+	* Check units of coordinate variables
+
 	* Add stubs to check CF "coordinates" attribute to infer grid
 
 2016-05-02  Charlie Zender  <zender@uci.edu>
